--- a/course-detail.html
+++ b/course-detail.html
@@ -71,6 +71,7 @@
                         <div class="course-tags">
                             <span class="tag">失智照顧</span>
                             <span class="badge">長照積分</span>
+                            <span class="badge badge--warning">會員限定</span>
                         </div>
                         <h1 class="course-title">失智友善溝通與行為支持</h1>
                         <div class="course-meta">
@@ -1042,6 +1043,13 @@
         .modal-header h2 {
             margin: 0;
             font-size: 24px;
+        }
+
+        /* Badge fallback for new labels */
+        .badge--warning {
+            background: #fef3c7;
+            color: #92400e;
+            border: 1px solid #fcd34d;
         }
         
         .modal-close {
