--- a/faq.html
+++ b/faq.html
@@ -161,7 +161,7 @@
                                     <ol>
                                         <li><strong>立即購買：</strong>系統會自動提醒需要的點數數量，點選「購買點數」立即加值</li>
                                         <li><strong>合作單位加值：</strong>如果您屬於合作機構，可請單位承辦人協助加值</li>
-                                        <li><strong>朋友分享：</strong>其他學員可透過「點數分享」功能贈送點數給您</li>
+                                        <li><strong>朋友轉贈：</strong>其他學員可透過「轉贈點數」功能贈送點數給您</li>
                                         <li><strong>課程優惠：</strong>關注官網公告，不定期有課程優惠或點數加碼活動</li>
                                     </ol>
                                     
@@ -174,12 +174,12 @@
 
                         <div class="faq-item">
                             <button class="faq-question" aria-expanded="false" aria-controls="faq-4">
-                                <span>可以將點數分享給其他人嗎？</span>
+                                <span>可以將點數轉贈給其他人嗎？</span>
                                 <span class="faq-toggle" aria-hidden="true">+</span>
                             </button>
                             <div class="faq-answer" id="faq-4">
                                 <div class="faq-content">
-                                    <p>是的！您可以將點數分享給其他註冊學員：</p>
+                                    <p>是的！您可以將點數轉贈給其他註冊學員：</p>
                                     
                                     <p><strong>分享步驟：</strong></p>
                                     <ol>
@@ -194,7 +194,7 @@
                                     <ul>
                                         <li>每次最少分享1點，最多50點</li>
                                         <li>每月分享上限為100點</li>
-                                        <li>受贈者須為已註冊會員</li>
+                                        <li>受贈者須為已註冊的學員帳號</li>
                                         <li>分享後無法取消，請確認資訊無誤</li>
                                         <li>分享的點數有效期限與原點數相同</li>
                                     </ul>
